adding lint step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,6 @@ jobs:
     - name: Test with Pytest
       run: |
         make test
+    - name: Lint with Pylint
+      run: |
+        make lint
